--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>uk.gov.companieshouse</groupId>
 	<artifactId>items.orders.api.ch.gov.uk</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>unversioned</version>
 	<name>items.orders.api.ch.gov.uk</name>
 	<description>CH API handling CRUD operations on several item kinds for the CH Ordering Service</description>
 
