--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,11 @@
+server:
+  servlet:
+    context-path: /orderable
 
+uk:
+  gov:
+    companieshouse:
+      items:
+        orders:
+          api:
+            path: /certificates
