--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
