--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<structured-logging.version>1.2.0-rc1</structured-logging.version>
+		<hamcrest-library-version>2.1</hamcrest-library-version>
+		<gson.version>2.8.0</gson.version>
 	</properties>
 
 	<dependencies>
@@ -42,6 +44,11 @@
 			<version>${structured-logging.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,7 +64,7 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>2.1</version>
+			<version>${hamcrest-library-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
