--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 			<version>${hamcrest-library-version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
