PCI-324: Add run configs with proxy settings for embedded MongoDB.

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,13 @@
 hs_err_pid*
 
 ### IntelliJ IDEA ###
-.idea
+.idea/*
+!.idea/runConfigurations
 *.iws
 *.iml
 *.ipr
+
+!.idea
 
 target/
 .classpath
