--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<structured-logging.version>1.2.0-rc1</structured-logging.version>
+		<structured-logging.version>1.9.0</structured-logging.version>
+		<commons.lang.version>2.6</commons.lang.version>
 		<hamcrest-library-version>2.1</hamcrest-library-version>
 		<gson.version>2.8.0</gson.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
@@ -45,6 +46,12 @@
 			<version>${structured-logging.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons.lang.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
