--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!-- spring boot parent pom must be at least 1.2.0 -->
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>uk.gov.companieshouse</groupId>
+		<artifactId>companies-house-spring-boot-parent</artifactId>
+		<version>1.2.0</version>
 	</parent>
-	<groupId>uk.gov.companieshouse</groupId>
 	<artifactId>items.orders.api.ch.gov.uk</artifactId>
 	<version>unversioned</version>
 	<name>items.orders.api.ch.gov.uk</name>
@@ -18,9 +17,11 @@
 		<java.version>1.8</java.version>
 		<structured-logging.version>1.9.0</structured-logging.version>
 		<commons.lang.version>2.6</commons.lang.version>
-		<hamcrest-library-version>2.1</hamcrest-library-version>
 		<gson.version>2.8.0</gson.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
+		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
+		<hamcrest-all-version>1.3</hamcrest-all-version>
 	</properties>
 
 	<dependencies>
@@ -75,14 +76,26 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter-engine-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito-junit-jupiter-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>${hamcrest-library-version}</version>
+			<artifactId>hamcrest-all</artifactId>
+			<version>${hamcrest-all-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
