--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
+		<javax.json-api.version>1.1.4</javax.json-api.version>
 	</properties>
 
 	<dependencies>
@@ -73,7 +74,7 @@
 		<dependency>
 			<groupId>javax.json</groupId>
 			<artifactId>javax.json-api</artifactId>
-			<version>1.1.4</version>
+			<version>${javax.json-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.johnzon</groupId>
