PCI-588: Use snake case naming strategy in the database.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,4 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URL}
+      field-naming-strategy: org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
