PCI-615: Override naming strategy to remove boolean is_ prefix.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,4 +14,4 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URL}
-      field-naming-strategy: org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
+      field-naming-strategy: uk.gov.companieshouse.items.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
