--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<javax.json-api.version>1.1.4</javax.json-api.version>
 		<guava.version>28.1-jre</guava.version>
+		<snakeyaml.version>1.25</snakeyaml.version>
 	</properties>
 
 	<dependencies>
@@ -91,6 +92,11 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snakeyaml.version}</version>
 		</dependency>
 
 		<dependency>
