--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "api-enumerations"]
 	path = api-enumerations
 	url = https://github.com/companieshouse/api-enumerations.git
+	branch = develop
