--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,14 +1,11 @@
-server:
-  servlet:
-    context-path: /orderable
-
 uk:
   gov:
     companieshouse:
       items:
         orders:
           api:
-            path: /certificates
+            certificates: /orderable/certificates
+            health: /healthcheck
 
 spring:
   data:
