--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -12,3 +12,9 @@ spring:
     mongodb:
       field-naming-strategy: uk.gov.companieshouse.items.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
 
+# TODO Can we move these values to costs.yaml?
+costs:
+  standard_cost: 15
+  same_day_cost: 50
+  standard_discount: 5
+  same_day_discount: 40
