--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
 			<version>${junit-jupiter.version}</version>
 		</dependency>
 		<dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.5.2</version>
+ 		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>${mockito-junit-jupiter-version}</version>
