--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<!-- spring boot parent pom must be at least 1.2.0 -->
 	<parent>
 		<groupId>uk.gov.companieshouse</groupId>
-		<artifactId>companies-house-spring-boot-parent</artifactId>
+		<artifactId>companies-house-parent</artifactId>
 		<version>1.2.0</version>
 	</parent>
 	<artifactId>certificates.orders.api.ch.gov.uk</artifactId>
@@ -22,19 +22,42 @@
 		<gson.version>2.8.0</gson.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
-		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
-		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<javax.json-api.version>1.1.4</javax.json-api.version>
 		<guava.version>28.1-jre</guava.version>
 		<snakeyaml.version>1.25</snakeyaml.version>
 		<api-sdk-manager-java-library.version>1.0.2</api-sdk-manager-java-library.version>
 		<api-sdk-java.version>4.2.1</api-sdk-java.version>
+		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
+		<!-- Test -->
+		<junit-jupiter-engine-version>5.4.2</junit-jupiter-engine-version>
+		<junit-jupiter.version>5.4.2</junit-jupiter.version>
+		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
+		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
 		<system-rules-version>1.19.0</system-rules-version>
 		<powermock.version>2.0.6</powermock.version>
-		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
+        
+		<!--  Spring -->
+		<spring-boot-dependencies.version>2.1.15.RELEASE</spring-boot-dependencies.version>
+		<spring-boot-maven-plugin.version>2.1.15.RELEASE</spring-boot-maven-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+   
+		<johnzon.version>1.2.7</johnzon.version>
+		<jackson.version>2.11.1</jackson.version>
 	</properties>
+    
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot-dependencies.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -143,6 +166,7 @@
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit-jupiter.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
             <groupId>org.junit.platform</groupId>
@@ -203,6 +227,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot-maven-plugin.version}</version>
 				<configuration>
 					<mainClass>${start-class}</mainClass>
 					<layout>ZIP</layout>
@@ -257,6 +282,11 @@
 						<!-- other annotation processors -->
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
 			</plugin>
 
 		</plugins>
