--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
 		<!-- Test -->
 		<junit-jupiter-engine-version>5.4.2</junit-jupiter-engine-version>
+		<junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>
 		<junit-jupiter.version>5.4.2</junit-jupiter.version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
@@ -160,6 +161,12 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>${junit-jupiter-engine-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-jupiter-api.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
