--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,9 @@
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
-		<system-rules-version>1.19.0</system-rules-version>
+		<!-- system-rules: 1.17.2 is the latest version that works with JUnit 5.
+             See https://github.com/stefanbirkner/system-rules/issues/70 -->
+		<system-rules-version>1.17.2</system-rules-version>
 		<powermock.version>2.0.6</powermock.version>
         
 		<!--  Spring -->
