--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
-		<!-- system-rules: 1.17.2 is the latest version that works with JUnit 5. 
+		<!-- system-rules: 1.17.2 is the latest version that works with JUnit 5.
 			See https://github.com/stefanbirkner/system-rules/issues/70 -->
 		<system-rules-version>1.17.2</system-rules-version>
 		<powermock.version>2.0.6</powermock.version>
@@ -249,6 +249,16 @@
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>2.6.0</version>
+				<configuration>
+					<extraDirectories>
+						<paths>
+							<path>
+								<from>${project.basedir}/api-enumerations</from>
+								<into>/api-enumerations</into>
+							</path>
+						</paths>
+					</extraDirectories>
+				</configuration>
 			</plugin>
 
 			<plugin>
