Add conditional validation logic for LP & LLP feature flags and validation

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -17,7 +17,7 @@ uk:
 ---
 
 spring:
-  profiles: enabled
+  profiles: feature-flags-enabled
 lp:
   certificate:
     orders:
@@ -30,7 +30,7 @@ llp:
 ---
 
 spring:
-  profiles: disabled
+  profiles: feature-flags-disabled
 lp:
   certificate:
     orders:
