Fix feature option configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,9 +16,9 @@ spring:
 lp:
   certificate:
     orders:
-      enabled: {$DYNAMIC_LP_CERTIFICATE_ORDERS_ENABLED}
+      enabled: ${DYNAMIC_LP_CERTIFICATE_ORDERS_ENABLED}
 
 llp:
   certificate:
     orders:
-      enabled: {$DYNAMIC_LLP_CERTIFICATE_ORDERS_ENABLED}
+      enabled: ${DYNAMIC_LLP_CERTIFICATE_ORDERS_ENABLED}
