POC - make company information constant
* Update certificate item request no longer calls company profile API to
  update company name/status/type.

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 			<artifactId>api-sdk-java</artifactId>
 			<version>${api-sdk-java.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>private-api-sdk-java</artifactId>
+            <version>unversioned</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
