update spring boot deps add mockmaker filer to allow final method mock update application yaml to allow output of exception messages

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,3 +22,8 @@ llp:
   certificate:
     orders:
       enabled: ${DYNAMIC_LLP_CERTIFICATE_ORDERS_ENABLED}
+
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
