--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,15 @@
 		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
 		<javax.json-api.version>1.1.4</javax.json-api.version>
 		<guava.version>28.1-jre</guava.version>
-		<snakeyaml.version>1.25</snakeyaml.version>
+		<snakeyaml.version>1.29</snakeyaml.version>
 		<api-sdk-manager-java-library.version>1.0.2</api-sdk-manager-java-library.version>
 		<api-sdk-java.version>4.2.1</api-sdk-java.version>
 		<api-security-java.version>0.3.4</api-security-java.version>
 		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
 		<!-- Test -->
-		<junit-jupiter-engine-version>5.4.2</junit-jupiter-engine-version>
-		<junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>
-		<junit-jupiter.version>5.4.2</junit-jupiter.version>
+<!--		<junit-jupiter-engine-version>5.4.2</junit-jupiter-engine-version>-->
+<!--		<junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>-->
+<!--		<junit-jupiter.version>5.4.2</junit-jupiter.version>-->
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
@@ -46,8 +46,8 @@
 		<jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
 
 		<!-- Spring -->
-		<spring-boot-dependencies.version>2.1.15.RELEASE</spring-boot-dependencies.version>
-		<spring-boot-maven-plugin.version>2.1.15.RELEASE</spring-boot-maven-plugin.version>
+		<spring-boot-dependencies.version>2.4.13</spring-boot-dependencies.version>
+		<spring-boot-maven-plugin.version>2.4.13</spring-boot-maven-plugin.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 
@@ -68,6 +68,16 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.4.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -165,30 +175,30 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit-jupiter-engine-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit-jupiter-api.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-engine</artifactId>-->
+<!--			<version>${junit-jupiter-engine-version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-api</artifactId>-->
+<!--			<version>${junit-jupiter-api.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.vintage</groupId>-->
+<!--			<artifactId>junit-vintage-engine</artifactId>-->
+<!--			<version>${junit-jupiter.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-params</artifactId>-->
+<!--			<version>${junit-jupiter.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-commons</artifactId>
