--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
 		<api-sdk-java.version>4.2.1</api-sdk-java.version>
 		<api-security-java.version>0.3.4</api-security-java.version>
 		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
+
 		<!-- Test -->
+		<junit-platform-launcher.version>1.4.0</junit-platform-launcher.version>
+		<junit-platform-commons.version>1.7.0</junit-platform-commons.version>
+		<junit-jupiter.version>5.4.2</junit-jupiter.version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
@@ -68,7 +72,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<version>5.4.2</version>
+			<version>${junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -175,12 +179,12 @@
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-commons</artifactId>
-			<version>1.7.0</version>
+			<version>${junit-platform-commons.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-launcher</artifactId>
-			<version>1.4.0</version>
+			<version>${junit-platform-launcher.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
