--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -12,6 +12,7 @@ uk:
         orders:
           api:
             certificates: /orderable/certificates
+            initial: /orderable/certificates/initial
             health: /healthcheck
 
 ---
