--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>private-api-sdk-java</artifactId>
-            <version>unversioned</version>
+            <version>2.0.103</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
