Add company status to certificate type mapping

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,6 +24,11 @@ llp:
     orders:
       enabled: ${DYNAMIC_LLP_CERTIFICATE_ORDERS_ENABLED}
 
+liquidated:
+  company:
+    certificate:
+      enabled: ${LIQUIDATED_COMPANY_CERTIFICATES_ENABLED}
+
 server:
   error:
     include-message: always
