Enable certs for companies in administration
* Add companies in administration feature flag
* Add AdministratorsDetails type
* Added administrators details property to item options
* Implemented mapping logic for company status to certificate type

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,11 @@ liquidated:
     certificate:
       enabled: ${LIQUIDATED_COMPANY_CERTIFICATES_ENABLED}
 
+administrator:
+  company:
+    certificate:
+      enabled: ${ADMINISTRATOR_COMPANY_CERTIFICATES_ENABLED}
+
 server:
   error:
     include-message: always
