--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -33,6 +33,11 @@ liquidated:
     certificate:
       enabled: true
 
+administrator:
+  company:
+    certificate:
+      enabled: true
+
 ---
 
 spring:
