--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<api-sdk-manager-java-library.version>1.0.2</api-sdk-manager-java-library.version>
 		<api-sdk-java.version>4.2.1</api-sdk-java.version>
 		<api-security-java.version>0.3.4</api-security-java.version>
+		<private-api-sdk-java.version>2.0.109</private-api-sdk-java.version>
 		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
 
 		<!-- Test -->
@@ -168,7 +169,7 @@
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>private-api-sdk-java</artifactId>
-            <version>2.0.103</version>
+            <version>${private-api-sdk-java.version}</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
