--- a/pom.xml
+++ b/pom.xml
@@ -15,47 +15,45 @@
 	<description>CH API handling CRUD operations on several item kinds for the CH Ordering Service</description>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<structured-logging.version>1.9.12</structured-logging.version>
-		<api-helper-java.version>1.1.0-rc1</api-helper-java.version>
+		<java.version>21</java.version>
+		<structured-logging.version>3.0.0</structured-logging.version>
+		<api-helper-java.version>3.0.0</api-helper-java.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.beanutils.version>1.9.4</commons.beanutils.version>
 		<gson.version>2.8.0</gson.version>
 		<org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
-		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
 		<javax.json-api.version>1.1.4</javax.json-api.version>
 		<guava.version>28.1-jre</guava.version>
-		<snakeyaml.version>1.29</snakeyaml.version>
-		<api-sdk-manager-java-library.version>1.0.2</api-sdk-manager-java-library.version>
-		<api-sdk-java.version>4.2.1</api-sdk-java.version>
-		<api-security-java.version>0.3.4</api-security-java.version>
-		<private-api-sdk-java.version>2.0.109</private-api-sdk-java.version>
+		<snakeyaml.version>2.2</snakeyaml.version>
+		<api-sdk-manager-java-library.version>3.0.0</api-sdk-manager-java-library.version>
+		<api-sdk-java.version>6.0.0</api-sdk-java.version>
+		<api-security-java.version>2.0.0</api-security-java.version>
+		<private-api-sdk-java.version>4.0.0</private-api-sdk-java.version>
 		<start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
 
 		<!-- Test -->
-		<junit-platform-launcher.version>1.4.0</junit-platform-launcher.version>
-		<junit-platform-commons.version>1.7.0</junit-platform-commons.version>
-		<junit-jupiter.version>5.4.2</junit-jupiter.version>
-		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
+		<junit-platform-launcher.version>1.9.3</junit-platform-launcher.version>
+		<junit-platform-commons.version>1.9.3</junit-platform-commons.version>
+		<junit-jupiter.version>5.9.3</junit-jupiter.version>
+		<mockito-junit-jupiter-version>5.7.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
-		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
-		<!-- system-rules: 1.17.2 is the latest version that works with JUnit 5.
-			See https://github.com/stefanbirkner/system-rules/issues/70 -->
-		<system-rules-version>1.17.2</system-rules-version>
-		<powermock.version>2.0.6</powermock.version>
-		<commons.io.version>2.11.0</commons.io.version>
+		<spring-cloud-contract-wiremock-version>4.0.4</spring-cloud-contract-wiremock-version>
+		<system-rules-version>1.19.0</system-rules-version>
+		<powermock.version>2.0.9</powermock.version>
+		<commons.io.version>2.15.0</commons.io.version>
 
 		<!-- Docker -->
-		<jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+		<jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
 
 		<!-- Spring -->
-		<spring-boot-dependencies.version>2.5.5</spring-boot-dependencies.version>
-		<spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+		<spring-boot-dependencies.version>3.1.5</spring-boot-dependencies.version>
+		<spring-boot-maven-plugin.version>3.1.5</spring-boot-maven-plugin.version>
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
 
-		<johnzon.version>1.2.7</johnzon.version>
-		<jackson.version>2.11.1</jackson.version>
+		<johnzon.version>2.0.0</johnzon.version>
+		<jackson.version>2.16.0</jackson.version>
 	</properties>
 
 	<dependencyManagement>
@@ -144,6 +142,11 @@
 			<version>${javax.json-api.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.1.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.johnzon</groupId>
 			<artifactId>johnzon-core</artifactId>
 			<version>${johnzon.version}</version>
@@ -220,6 +223,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>4.11.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -234,6 +238,12 @@
 			<version>${spring-cloud-contract-wiremock-version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>5.12.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
