Add sonarQube analysis report

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,25 @@
 
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
 
+        <!-- sonar config -->
+		<sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+		<sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
+		<sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
+		<sonar.login></sonar.login>
+		<sonar.password></sonar.password>
+		<sonar.projectKey>uk.gov.companieshouse:certificates.orders.api.ch.gov.uk</sonar.projectKey>
+		<sonar.projectName>certificates.orders.api.ch.gov.uk</sonar.projectName>
+		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml,
+			${project.basedir}/target/site/jacoco-it/jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
+		<sonar.dependencyCheck.htmlReportPath>
+			${project.basedir}/target/dependency-check-report.html
+		</sonar.dependencyCheck.htmlReportPath>
+		<sonar.java.binaries>
+			${project.basedir}/target
+		</sonar.java.binaries>
+
         <argLine>
             --add-opens java.base/java.util=ALL-UNNAMED
             --add-opens java.base/java.lang=ALL-UNNAMED
