--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,7 +1,8 @@
 spring:
   config:
-    active:
-      on-profile: feature-flags-enabled,feature-flags-disabled,lp-feature-flag-enabled,llp-feature-flag-enabled
+    import: "classpath:cost.yaml"
+  profiles:
+    active: feature-flags-enabled,feature-flags-disabled,lp-feature-flag-enabled,llp-feature-flag-enabled
 
   data:
     mongodb:
