--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,8 +1,7 @@
 spring:
   config:
-    import: "classpath:cost.yaml"
-  profiles:
-    active: feature-flags-enabled,feature-flags-disabled,lp-feature-flag-enabled,llp-feature-flag-enabled
+    active:
+      on-profile: feature-flags-enabled,feature-flags-disabled,lp-feature-flag-enabled,llp-feature-flag-enabled
 
   data:
     mongodb:
